# Tessera

./: .env.example  .gitignore  .npmrc  BRANCH_PROTECTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/docker/: Dockerfile.runner-js  Dockerfile.runner-py
apps/desktop/src-tauri/docs/adr/: 0001-blob-embeddings.md  0002-vec0-migration-trigger.md  0003-llm-provider-trait.md  0004-sandbox-test-runner.md  README.md
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_generation_metadata.sql  0003_phase4_compat.sql  0004_test_runs.sql  0005_embedding_config.sql  0007_test_case_results.sql  0008_flaky_checks.sql  0009_mutation_checks.sql  0010_heal_checks.sql
apps/desktop/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  menu.rs
apps/desktop/src-tauri/src/auth/: dto.rs  jwt.rs  middleware.rs  mod.rs  password.rs
apps/desktop/src-tauri/src/commands/: analysis.rs  artifacts.rs  auth.rs  embeddings.rs  exports.rs  generation.rs  healing.rs  health.rs  mod.rs  projects.rs  providers.rs  sandbox.rs  test_case_results.rs  trackers.rs
apps/desktop/src-tauri/src/db/: mod.rs  models.rs
apps/desktop/src-tauri/src/prompts/: bug_report_v1.rs  bug_report_v2.rs  context_md_v1.rs  defect_report_v1.rs  defect_report_v2.rs  mod.rs  runnable_files_v1.rs  snapshots.rs  test_cases_v1.rs  test_cases_v2.rs  test_plan_v1.rs  test_plan_v2.rs
apps/desktop/src-tauri/src/providers/: factory.rs  mod.rs
apps/desktop/src-tauri/src/repositories/: artifact_repo.rs  chunk_repo.rs  embedding_config_repo.rs  mod.rs  (+12 more)
apps/desktop/src-tauri/tests/: integration_ollama.rs
(+246 files in other folders)
