[package]
name = "testing-ide"
version = "0.1.0"
description = "AI-powered testing IDE — Tauri backend"
authors = ["Testing IDE Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "testing_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
sqlite-vec = "0.1"
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
async-stream = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
walkdir = "2"
jsonschema = { version = "0.18", default-features = false }
aes-gcm = "0.10"
rand = "0.8"
sysinfo = "0.31"
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
email_address = "0.2"
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
mockito = "1"
insta = { version = "1", features = ["yaml"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
